# martyrology-api

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
data/editions/: README.md
data/editions/martyrologium_romanum_1749/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  alignment.json
data/editions/martyrologium_romanum_1914_en_unofficial/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  alignment.json
docs/: architecture.md  follow-ups.md
docs/superpowers/plans/: 2026-07-22-martyrology-api-v1.md
docs/superpowers/specs/: 2026-07-22-martyrology-api-v1-design.md
scripts/: align_1749_ids.py  align_1914_en_ids.py  digitize_1749.py  digitize_1914_en.py  remediate_group_slugs.py
scripts/data/: align_1914_overrides.json
src/martyrology_api/: app.py  auth.py  authz.py  caching.py  config.py  grammar.py  licensing.py  models.py  problems.py  registry.py  resolver.py  store.py
src/martyrology_api/routers/: curation.py  discovery.py  read.py
src/martyrology_api/writer/: base.py  github.py  local.py  service.py  validation.py
tests/: conftest.py  test_auth.py  test_authz.py  test_caching.py  test_config.py  test_curation_api.py  test_curation_service.py  test_discovery_api.py  test_github_backend.py  test_grammar.py  test_licensing_api.py  test_openapi.py  test_problems.py  test_read_api.py  test_registry.py  test_resolver.py  test_smoke_realdata.py  test_store.py  test_validation.py  test_writer_local.py
tests/fixtures/clbdr/data/: editions.json
tests/fixtures/crmedr/data/: deprecated_ids.json  martyrology_ids.json
tests/fixtures/crmedr/i18n/: en.json  la.json
tests/fixtures/editions_private/martyrologium_romanum_2004/: 01.json  02.json
tests/fixtures/editions_private/martyrologium_romanum_2004_it_IT/: 01.json
tests/fixtures/editions_public/martyrologium_romanum_1749/: 01.json  02.json
tests/fixtures/editions_public/martyrologium_romanum_1914_en_unofficial/: 01.json
