[project]
name = "martyrology-api"
version = "0.1.0"
description = "Roman Martyrology API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/martyrology_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
